--- a/herb/index.html
+++ b/herb/index.html
@@ -5,7 +5,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>LP風ポートフォリオ</title>
 <link rel="stylesheet" href="css/reset.css">
-<link rel="stylesheet" href="css/style.min.css">
+<link rel="stylesheet" href="css/style.css">
 <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
 </head>
 <body>
@@ -282,7 +282,7 @@
           <li>
             <div class="p-footer__skill--subTitle--wrap">
               <p class="p-footer__skill--subTitle--css">
-                CSS<br>(SCSS)
+                CSS<br>(SASS)
               </p>
             </div>
             <p class="p-footer__skill--text">
@@ -322,12 +322,12 @@
               </li>
               <li class="u-skill-css">
                 <p class="p-footer__skill--more--title">
-                  CSS(SCSS)
+                  CSS
                 </p>
               </li>
               <li class="u-skill-respons">
                 <p class="p-footer__skill--more--title">
-                  Responsive
+                  RWD
                 </p>
               </li>
               <li class="u-skill-jquery">
@@ -339,17 +339,17 @@
           <ul class="p-footer__skill--more--contents--list">
             <li class="u-skill-html">
               <p class="p-footer__skill--more--text">
-                一応キャンペーンLP風に作成したので、物販サイトっぽい文章にしました。フォントアイコンはfontawesome、写真はpixabayのフリー素材を使用しています。
+                一応キャンペーンLP風に作成したので、それを意識して文章を考えました。フォントアイコンはfontawesome、写真はpixabayのフリー素材を使用しています。
               </p>
             </li>
             <li class="is-hidden u-skill-css">
               <p class="p-footer__skill--more--text">
-                モバイルファーストでコーディングしましたが、よく考えたらこれはポートフォリオなので、モバイルファーストにする必要性に乏しいですが、一応どっちでもできますアピールになると信じモバイルファーストで構築しました。
+                使用エディタはatom。sass-autocompileを使用して作成しました。モバイルファーストの構築です。
               </p>
             </li>
             <li class="is-hidden u-skill-respons">
               <p class="p-footer__skill--more--text">
-                ブレークポイントは<br>・スマートフォンが640px以下<br>・タブレットが641px以上959px以下<br>・PCが960px以上の設定です。
+                ブレークポイントは<br>・スマートフォンが640px以下<br>・タブレットが641px以上959px以下<br>・PCが960px以上<br>になります。<br>iPhone5の表示領域320pxまではレイアウトの担保をしています。
               </p>
             </li>
             <li class="is-hidden u-skill-jquery">
