--- a/index.html
+++ b/index.html
@@ -13,22 +13,26 @@
     <div class="p-header__gNav--wrap">
       <nav class="p-header__gNav">
         <div id="p-header__sp--menu--wrap">
-          <p class="p-header__sp--menu--title">
-            <a class="p-header__sp--topLink" href="#">
+          <a class="p-header__sp--topLink" href="#">
+            <p>
               portfolio
-            </a>
-          </p>
-          <div id="p-header__sp--menu--icon">
-            <i class="fas fa-bars"></i>
+            </p>
+          </a>
+          <div id="p-header__sp--menuIcon--wrap">
+            <ul class="p-header__sp--menu--iconList">
+              <li></li>
+              <li></li>
+              <li></li>
+            </ul>
           </div>
         </div>
         <ul class="p-header__gNav--list">
           <li>
-            <p class="p-header__pc--title">
-              <a class="p-header__pc--topLink" href="#">
+            <a class="p-header__pc--topLink" href="#">
+              <p>
                 Portfolio
-              </a>
-            </p>
+              </p>
+            </a>
           </li>
           <li>
             <ul class="p-header__gNav--inner--list">
@@ -83,7 +87,7 @@
       <ul class="p-main__about--list">
         <li>
           <div class="p-main__about--photo--wrap">
-            <img class="p-main__about--photo" src="img/img1.jpg">
+            <img class="p-main__about--photo" src="img/img1.jpg" alt="エルダーハーブシロップ">
           </div>
           <dl class="p-main__about--inner--list">
             <dt>
@@ -107,7 +111,7 @@
         </li>
         <li>
           <div class="p-main__about--photo--wrap">
-            <img class="p-main__about--photo" src="img/img9.jpg">
+            <img class="p-main__about--photo" src="img/img9.jpg" alt="エルダーハーブ インテリア">
           </div>
           <dl class="p-main__about--inner--list">
             <dt>
@@ -143,7 +147,7 @@
           <ul class="p-main__enjoy--inner--list">
             <li>
               <div class="p-main__enjoy--photo--wrap u-enjoy-arrow">
-                <img class="p-main__enjoy--photo" src="img/enjoy0.jpg">
+                <img class="p-main__enjoy--photo" src="img/enjoy0.jpg" alt="白いエルダーフラワー">
               </div>
               <p class="p-main__enjoy--text">
                 植え付け時期は3〜4月。<br>5〜6月には開花し、綺麗な花を咲かせてくれます。
@@ -158,7 +162,7 @@
           <ul class="p-main__enjoy--inner--list">
             <li>
               <div class="p-main__enjoy--photo--wrap u-enjoy-arrow">
-                <img class="p-main__enjoy--photo" src="img/enjoy1.jpg">
+                <img class="p-main__enjoy--photo" src="img/enjoy1.jpg" alt="乾燥エルダーフラワー">
               </div>
               <p class="p-main__enjoy--text">
                 収穫時期は8〜10月。<br>この時期が黒い実の収穫シーズンです。花はいつでも収穫できます。
@@ -173,7 +177,7 @@
           <ul class="p-main__enjoy--inner--list">
             <li>
               <div class="p-main__enjoy--photo--wrap">
-                <img class="p-main__enjoy--photo" src="img/enjoy2.jpg">
+                <img class="p-main__enjoy--photo" src="img/enjoy2.jpg" alt="エルダーフラワーシロップとライム">
               </div>
               <p class="p-main__enjoy--text">
                 花はシロップやハーブティー。<br>
@@ -198,11 +202,11 @@
           <ul class="p-main__leveling--innerList">
             <li>
               <div class="p-main__leveling--photo--wrap">
-                <img class="p-main__leveling--photo" src="img/limg0.jpg">
+                <img class="p-main__leveling--photo" src="img/limg0.jpg" alt="スコップとプランター">
               </div>
               <div class="p-main__leveling--text--wrap">
                 <p class="p-main__leveling--text">
-                  スコップとプランターがあれば始められます。土はなんでも大丈夫ですが、腐葉土や堆肥を沢山入れた弱アルカリ性の土壌が理想です。もちろん地植えすることもできます。
+                  スコップとプランターがあれば始められます。土はなんでも大丈夫ですが、腐葉土や堆肥を沢山入れた弱アルカリ性の土壌が理想です。もちろん地植えすることもできます。
                 </p>
               </div>
             </li>
@@ -215,7 +219,7 @@
           <ul class="p-main__leveling--innerList">
             <li>
               <div class="p-main__leveling--photo--wrap">
-                <img class="p-main__leveling--photo" src="img/limg1.jpg">
+                <img class="p-main__leveling--photo" src="img/limg1.jpg" alt="ジョウロ">
               </div>
               <div class="p-main__leveling--text--wrap">
                 <p class="p-main__leveling--text">
@@ -232,7 +236,7 @@
           <ul class="p-main__leveling--innerList">
             <li>
               <div class="p-main__leveling--photo--wrap">
-                <img class="p-main__leveling--photo u__leveling-scale" src="img/limg2.jpg">
+                <img class="p-main__leveling--photo u__leveling-scale" src="img/limg2.jpg" alt="寝ている犬">
               </div>
               <div class="p-main__leveling--text--wrap">
                 <p class="p-main__leveling--text">
@@ -249,7 +253,7 @@
           <ul class="p-main__leveling--innerList">
             <li>
               <div class="p-main__leveling--photo--wrap">
-                <img class="p-main__leveling--photo" src="img/limg3.jpg">
+                <img class="p-main__leveling--photo" src="img/limg3.jpg" alt="エルダーフラワーの実">
               </div>
               <div class="p-main__leveling--text--wrap">
                 <p class="p-main__leveling--text">
