--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <header>
     <div class="p-header__gNav--wrap">
       <nav class="p-header__gNav">
-        <div id="p-header__sp--menu--wrap">
+        <div class="p-header__sp--menu--wrap">
           <a class="p-header__sp--topLink" href="#">
             <p>
               portfolio
