--- a/index.html
+++ b/index.html
@@ -367,7 +367,7 @@
     </div>
     <div class="p-footer__copyRight">
       <p class="p-footer__copyRight--text">
-        ©️ copyright M.Mizuno.
+        ©️ copyright M.Mizuno
       </p>
     </div>
   </footer>
