--- a/index.html
+++ b/index.html
@@ -280,7 +280,7 @@
               </p>
             </div>
             <p class="p-footer__skill--text">
-              リキッドレイアウトでLP風のデザインです。テンプレートは未使用です。
+              フレキシブルレイアウトでLP風のデザインです。テンプレートは未使用です。
             </p>
           </li>
           <li>
