--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
       </h2>
       <div class="p-work-inner-wrap">
         <div class="p-work-inner">
-          <a class="p-work-link" target="_blank" href="portfolio/herb/index.html">
+          <a class="p-work-link" target="_blank" href="herb/index.html">
             <p class="p-work-subTitle">エルダーフラワーを育てたい</p>
             <div class="p-work-image-wrap">
               <img src="img/herb.png" class="p-work-image">
@@ -97,7 +97,7 @@
           </a>
         </div>
         <div class="p-work-inner">
-          <a class="p-work-link" target="_blank" href="portfolio/bost/index.html">
+          <a class="p-work-link" target="_blank" href="bost/index.html">
             <p class="p-work-subTitle">黄道を征く</p>
             <div class="p-work-image-wrap">
               <img src="img/zodi.png" class="p-work-image">
