--- a/bost/index.html
+++ b/bost/index.html
@@ -53,7 +53,7 @@
         <div class="col-md-6 px-0">
           <div class="row mx-0">
             <div class="col-6 px-0 u-img-bg-s">
-              <img class="w-100 h-100" src="img/4.png">
+              <img class="w-100 h-100" src="img/s_4.png">
             </div>
             <div class="col-6 px-0 u-text-bg">
               <div>
@@ -66,7 +66,7 @@
               </div>
             </div>
             <div class="col-6 px-0 u-img-bg-s order-2">
-              <img class="w-100 h-100" src="img/5.png">
+              <img class="w-100 h-100" src="img/s_5.png">
             </div>
             <div class="col-6 px-0 u-text-bg order-1">
               <div>
@@ -101,7 +101,7 @@
         <div class="col-md-6 px-0 order-md-2">
           <div class="row mx-0">
             <div class="col-6 px-0 u-img-bg-s">
-              <img class="w-100 h-100" src="img/8.png">
+              <img class="w-100 h-100" src="img/s_8.png">
             </div>
             <div class="col-6 px-0 u-text-bg">
               <div>
@@ -114,7 +114,7 @@
               </div>
             </div>
             <div class="col-6 px-0 u-img-bg-s order-2">
-              <img class="w-100 h-100" src="img/9.png">
+              <img class="w-100 h-100" src="img/s_9.png">
             </div>
             <div class="col-6 px-0 u-text-bg order-1">
               <div>
@@ -149,7 +149,7 @@
         <div class="col-md-6 px-0">
           <div class="row mx-0">
             <div class="col-6 px-0 u-img-bg-s">
-              <img class="w-100 h-100" src="img/10.png">
+              <img class="w-100 h-100" src="img/s_10.png">
             </div>
             <div class="col-6 px-0 u-text-bg">
               <div>
@@ -162,7 +162,7 @@
               </div>
             </div>
             <div class="col-6 px-0 u-img-bg-s order-2">
-              <img class="w-100 h-100" src="img/11.png">
+              <img class="w-100 h-100" src="img/s_11.png">
             </div>
             <div class="col-6 px-0 u-text-bg order-1">
               <div>
@@ -197,7 +197,7 @@
         <div class="col-md-6 px-0 order-md-2">
           <div class="row mx-0">
             <div class="col-6 px-0 u-img-bg-s">
-              <img class="w-100 h-100" src="img/2.png">
+              <img class="w-100 h-100" src="img/s_2.png">
             </div>
             <div class="col-6 px-0 u-text-bg">
               <div>
@@ -210,7 +210,7 @@
               </div>
             </div>
             <div class="col-6 px-0 u-img-bg-s order-2">
-              <img class="w-100 h-100" src="img/3.png">
+              <img class="w-100 h-100" src="img/s_3.png">
             </div>
             <div class="col-6 px-0 u-text-bg text-center order-1">
               <div>
