--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
           <a class="p-work-link" target="_blank" href="herb/index.html">
             <p class="p-work-subTitle">エルダーフラワーを育てたい</p>
             <div class="p-work-image-wrap">
-              <img src="img/herb.png" class="p-work-image">
+              <img src="img/herb.jpg" class="p-work-image">
             </div>
             <p class="p-work-text">
               テンプレート未使用のキャンペーンLP風サイト。
@@ -100,7 +100,7 @@
           <a class="p-work-link" target="_blank" href="bost/index.html">
             <p class="p-work-subTitle">黄道を征く</p>
             <div class="p-work-image-wrap">
-              <img src="img/zodi.png" class="p-work-image">
+              <img src="img/zodi.jpg" class="p-work-image">
             </div>
             <p class="p-work-text">
               Bootstrapのグリッドコンポネートを使用。
