--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
           </li>
         </ul>
         <div>
-          <img class="p-gNav-pic" src="img/nav.png">
+          <img class="p-gNav-pic" src="img/nav.png" alt="ガチャ天井">
         </div>
       </nav>
       <div class="overlay"></div>
@@ -53,7 +53,7 @@
         </div>
         <div class="p-about-contents">
           <div class="p-about__photo--wrap">
-            <img class="p-about__photo" src="img/photo0.jpg">
+            <img class="p-about__photo" src="img/photo0.jpg" alt="朝日">
           </div>
           <div class="p-about__text--wrap">
             <p class="p-about__text">HTML</p>
@@ -62,7 +62,7 @@
         </div>
         <div class="p-about-contents u-about-even">
           <div class="p-about__photo--wrap">
-            <img class="p-about__photo" src="img/photo1.jpg">
+            <img class="p-about__photo" src="img/photo1.jpg" alt="夕暮">
           </div>
           <div class="p-about__text--wrap">
             <p class="p-about__text">Bootstrap</p>
@@ -71,7 +71,7 @@
         </div>
         <div class="p-about-contents">
           <div class="p-about__photo--wrap">
-            <img class="p-about__photo" src="img/photo2.jpg">
+            <img class="p-about__photo" src="img/photo2.jpg" alt="白夜">
           </div>
           <div class="p-about__text--wrap">
             <p class="p-about__text">JavaScript</p>
@@ -89,7 +89,7 @@
           <a class="p-work-link" target="_blank" href="herb/index.html">
             <p class="p-work-subTitle">エルダーフラワーを育てたい</p>
             <div class="p-work-image-wrap">
-              <img src="img/herb.jpg" class="p-work-image">
+              <img src="img/herb.jpg" class="p-work-image" alt="スクラッチサイト">
             </div>
             <p class="p-work-text">
               テンプレート未使用のキャンペーンLP風サイト。
@@ -100,7 +100,7 @@
           <a class="p-work-link" target="_blank" href="bost/index.html">
             <p class="p-work-subTitle">黄道を征く</p>
             <div class="p-work-image-wrap">
-              <img src="img/zodi.jpg" class="p-work-image">
+              <img src="img/zodi.jpg" class="p-work-image" alt="bootstrap使用サイト">
             </div>
             <p class="p-work-text">
               Bootstrapのグリッドコンポネートを使用。
