--- a/bost/index.html
+++ b/bost/index.html
@@ -53,7 +53,7 @@
         <div class="col-md-6 px-0">
           <div class="row mx-0">
             <div class="col-6 px-0 u-img-bg-s">
-              <img class="w-100 h-100" src="img/s_4.png">
+              <img class="w-100 h-100" src="img/s_4.png" alt="牡羊座">
             </div>
             <div class="col-6 px-0 u-text-bg">
               <div>
@@ -66,7 +66,7 @@
               </div>
             </div>
             <div class="col-6 px-0 u-img-bg-s order-2">
-              <img class="w-100 h-100" src="img/s_5.png">
+              <img class="w-100 h-100" src="img/s_5.png" alt="牡羊座">
             </div>
             <div class="col-6 px-0 u-text-bg order-1">
               <div>
@@ -101,7 +101,7 @@
         <div class="col-md-6 px-0 order-md-2">
           <div class="row mx-0">
             <div class="col-6 px-0 u-img-bg-s">
-              <img class="w-100 h-100" src="img/s_8.png">
+              <img class="w-100 h-100" src="img/s_8.png" alt="獅子座">
             </div>
             <div class="col-6 px-0 u-text-bg">
               <div>
@@ -114,7 +114,7 @@
               </div>
             </div>
             <div class="col-6 px-0 u-img-bg-s order-2">
-              <img class="w-100 h-100" src="img/s_9.png">
+              <img class="w-100 h-100" src="img/s_9.png" alt="乙女座">
             </div>
             <div class="col-6 px-0 u-text-bg order-1">
               <div>
@@ -149,7 +149,7 @@
         <div class="col-md-6 px-0">
           <div class="row mx-0">
             <div class="col-6 px-0 u-img-bg-s">
-              <img class="w-100 h-100" src="img/s_10.png">
+              <img class="w-100 h-100" src="img/s_10.png" alt="天秤座">
             </div>
             <div class="col-6 px-0 u-text-bg">
               <div>
@@ -162,7 +162,7 @@
               </div>
             </div>
             <div class="col-6 px-0 u-img-bg-s order-2">
-              <img class="w-100 h-100" src="img/s_11.png">
+              <img class="w-100 h-100" src="img/s_11.png" alt="蠍座">
             </div>
             <div class="col-6 px-0 u-text-bg order-1">
               <div>
@@ -197,7 +197,7 @@
         <div class="col-md-6 px-0 order-md-2">
           <div class="row mx-0">
             <div class="col-6 px-0 u-img-bg-s">
-              <img class="w-100 h-100" src="img/s_2.png">
+              <img class="w-100 h-100" src="img/s_2.png" alt="水瓶座">
             </div>
             <div class="col-6 px-0 u-text-bg">
               <div>
@@ -210,7 +210,7 @@
               </div>
             </div>
             <div class="col-6 px-0 u-img-bg-s order-2">
-              <img class="w-100 h-100" src="img/s_3.png">
+              <img class="w-100 h-100" src="img/s_3.png" alt="魚座">
             </div>
             <div class="col-6 px-0 u-text-bg text-center order-1">
               <div>
