--- a/herb/index.html
+++ b/herb/index.html
@@ -87,7 +87,7 @@
       <ul class="p-main__about--list">
         <li>
           <div class="p-main__about--photo--wrap">
-            <img class="p-main__about--photo" src="img/img1.jpg" alt="エルダーハーブシロップ">
+            <img class="p-main__about--photo" src="img/s_img1.jpg" alt="エルダーハーブシロップ">
           </div>
           <dl class="p-main__about--inner--list">
             <dt>
@@ -111,7 +111,7 @@
         </li>
         <li>
           <div class="p-main__about--photo--wrap">
-            <img class="p-main__about--photo" src="img/img9.jpg" alt="エルダーハーブ インテリア">
+            <img class="p-main__about--photo" src="img/s_img9.jpg" alt="エルダーハーブ インテリア">
           </div>
           <dl class="p-main__about--inner--list">
             <dt>
@@ -147,7 +147,7 @@
           <ul class="p-main__enjoy--inner--list">
             <li>
               <div class="p-main__enjoy--photo--wrap u-enjoy-arrow">
-                <img class="p-main__enjoy--photo" src="img/enjoy0.jpg" alt="白いエルダーフラワー">
+                <img class="p-main__enjoy--photo" src="img/s_enjoy0.jpg" alt="白いエルダーフラワー">
               </div>
               <p class="p-main__enjoy--text">
                 植え付け時期は3〜4月。<br>5〜6月には開花し、綺麗な花を咲かせてくれます。
@@ -162,7 +162,7 @@
           <ul class="p-main__enjoy--inner--list">
             <li>
               <div class="p-main__enjoy--photo--wrap u-enjoy-arrow">
-                <img class="p-main__enjoy--photo" src="img/enjoy1.jpg" alt="乾燥エルダーフラワー">
+                <img class="p-main__enjoy--photo" src="img/s_enjoy1.jpg" alt="乾燥エルダーフラワー">
               </div>
               <p class="p-main__enjoy--text">
                 収穫時期は8〜10月。<br>この時期が黒い実の収穫シーズンです。花はいつでも収穫できます。
@@ -177,7 +177,7 @@
           <ul class="p-main__enjoy--inner--list">
             <li>
               <div class="p-main__enjoy--photo--wrap">
-                <img class="p-main__enjoy--photo" src="img/enjoy2.jpg" alt="エルダーフラワーシロップとライム">
+                <img class="p-main__enjoy--photo" src="img/s_enjoy2.jpg" alt="エルダーフラワーシロップとライム">
               </div>
               <p class="p-main__enjoy--text">
                 花はシロップやハーブティー。<br>
@@ -202,7 +202,7 @@
           <ul class="p-main__leveling--innerList">
             <li>
               <div class="p-main__leveling--photo--wrap">
-                <img class="p-main__leveling--photo" src="img/limg0.jpg" alt="スコップとプランター">
+                <img class="p-main__leveling--photo" src="img/s_limg0.jpg" alt="スコップとプランター">
               </div>
               <div class="p-main__leveling--text--wrap">
                 <p class="p-main__leveling--text">
@@ -219,7 +219,7 @@
           <ul class="p-main__leveling--innerList">
             <li>
               <div class="p-main__leveling--photo--wrap">
-                <img class="p-main__leveling--photo" src="img/limg1.jpg" alt="ジョウロ">
+                <img class="p-main__leveling--photo" src="img/s_limg1.jpg" alt="ジョウロ">
               </div>
               <div class="p-main__leveling--text--wrap">
                 <p class="p-main__leveling--text">
@@ -236,7 +236,7 @@
           <ul class="p-main__leveling--innerList">
             <li>
               <div class="p-main__leveling--photo--wrap">
-                <img class="p-main__leveling--photo u__leveling-scale" src="img/limg2.jpg" alt="寝ている犬">
+                <img class="p-main__leveling--photo u__leveling-scale" src="img/s_limg2.jpg" alt="寝ている犬">
               </div>
               <div class="p-main__leveling--text--wrap">
                 <p class="p-main__leveling--text">
@@ -253,7 +253,7 @@
           <ul class="p-main__leveling--innerList">
             <li>
               <div class="p-main__leveling--photo--wrap">
-                <img class="p-main__leveling--photo" src="img/limg3.jpg" alt="エルダーフラワーの実">
+                <img class="p-main__leveling--photo" src="img/s_limg3.jpg" alt="エルダーフラワーの実">
               </div>
               <div class="p-main__leveling--text--wrap">
                 <p class="p-main__leveling--text">
