--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html lang="ja" dir="ltr">
 <head>
 <meta charset="utf-8">
-<title></title>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Portforio</title>
 <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
 <link rel="stylesheet" href="css/reset.css">
 <link rel="stylesheet" href="css/style.css">
@@ -82,7 +83,7 @@
     </div>
     <div id="p-work">
       <h2 class="p-work__title">
-        WORK
+        <span class="p-work__title--bg">WORK</span>
       </h2>
       <div class="p-work-inner-wrap">
         <div class="p-work-inner">
