--- a/index.html
+++ b/index.html
@@ -110,6 +110,11 @@
         </div>
       </div>
     </div>
+    <footer>
+      <p class="p-footer-cr">
+        Copyright 2019 M.Mizuno.
+      </p>
+    </footer>
   </div>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
 <script src="js/script.js"></script>
